@startuml DiagramaDeClasses

skinparam classAttributeIconSize 0

class Jogador {
    -nickName: String
    -simbolo: String
    -oponente: Jogador
    +jogar(): void
    +escolherOponente(): void
    +escolherDificuldade(): void
    +getNickName(): String
    +getSimbolo(): String
    +getOponente(): Jogador
    +toString(): String
}

class ComputadorFacil {
    +jogar(): void
}

class ComputadorDificil {
    +jogar(): void
}

class Tabuleiro {
    -posicoesTabuleiro: String
    -quantidadeDeJogadas: int
    -simboloVencedor: String
    -inicializarTabuleiro(): void
    +verificarVitoria(): boolean
    +mostrarTabuleiro(): void
    +getPosicoesTabuleiro(): String
    +getSimboloVencedor(): String
    +getQuantidadeDeJogadas(): int
    +setQuantidadeDeJogadas(): void
}

class Principal{
    +main(): void
    +apresentarResultado(): void
    +menuInstrucoes(): void
    +limparTela(): void
}

Jogador <|-- ComputadorFacil
Jogador <|-- ComputadorDificil

@enduml